# minibin

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
src/: io.rs  main.rs  params.rs
templates/: base.html  index.html
