[package]
name = "minibin"
version = "0.0.1"
description = "A minimal pastebin"
repository = "https://github.com/tylerlm/minibin"
license = "WTFPL or 0BSD"
authors = ["Jordan Doyle <jordan@doyle.la>", "Tyler Morgan"]
edition = "2018"
publish = false

[dependencies]
owning_ref = "0.4"
linked-hash-map = "0.5"
rocket = { version = "0.4.2", default-features = false }
askama = "0.8"
lazy_static = "1.2"
rand = { version = "0.6", features = ["nightly"] }
gpw = "0.1"
serde_derive = "1.0"

[profile.release]
lto = true
codegen-units = 1
incremental = false
overflow-checks = true
opt-level = 3
